Fixed info section needing a double click to appear Changed stylesheet.css #table readability

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -111,7 +111,8 @@
   border-spacing: 0px;
   background-color: #eee5be;
   border-spacing: inherit;
-  display: block; margin-top: 120px
+  display: block;
+  margin-top: 120px
 }
 
 #scroll {
